# godocards

./: .gitignore  Cargo.toml  Makefile.toml  README.md  shell.nix
common/: Cargo.toml
common/src/: card.rs  card_builder.rs  game_match.rs  lib.rs  mana.rs  player.rs
godot/: Builds.tscn  Card.tscn  Character.tscn  Deck.tscn  Items.tscn  Mana.tscn  Match.tscn  Player.tscn  PlayerClient.tscn  PlayerRemote.tscn  Spell.tscn  Unit.tscn  project.godot
godot/assets/card_prefabs/: decmini.json
godot/assets/gd/: godot-ferris-1024x1024.png.import  godot-ferris-120x120.png.import  godot-ferris-128x128.png.import  godot-ferris-16x16.png.import  godot-ferris-32x32.png.import  godot-ferris-64x64.png.import  godot-ferris-76x76.png.import
godot/assets/sprites/: avatar.png.import  avatar.xcf  avatarmini.png.import  avatarmini1.png.import  back_card_mini.png.import  build_deck_mini.png.import  builds.png.import  card_back.png.import  card_deck_mini.png.import  (+19 more)
godot/native/: Match.gdns  game.gdnlib
godot/scenes/: Game.tscn  Match.tscn
rust/: Cargo.toml
rust/src/: game.rs  input.rs  input_action.rs  layout.rs  lib.rs  matchmaking.rs  network.rs  rendering.rs  resources.rs
rust/src/boards/: board.rs  mod.rs
rust/src/component/: mod.rs
rust/src/component/card/: mod.rs
rust/src/gui/: card.rs  layout.rs  line.rs  mod.rs  player.rs
rust/src/gui/system/: dragging.rs  hovered.rs  mod.rs
rust/src/input/: mod.rs
rust/src/matchs/: match1x1.rs  match2x2.rs  match_two_faces.rs  mod.rs
rust/src/network/: mod.rs
rust/src/network/common/: mod.rs
rust/src/player/: mod.rs
rust/src/player/components/: card.rs  hand.rs  line.rs  mod.rs  tabel.rs
rust/src/selecting/: mod.rs
rust/src/store/: mod.rs
rust/src/system/: mod.rs
rust/src/systems/: mod.rs
rust/src/utils/: mod.rs
rust2/src/: lib.rs  resources.rs
rust_old/src/: game.rs  matchmaking.rs  resources.rs
server/: Cargo.toml
server/src/: board.rs  card.rs  main.rs  mana.rs  network.rs  player.rs
server/src/common/: mod.rs
(+28 files in other folders)
