[package]
name = "godocards"
version = "0.1.0"
authors = ["romeo555555 <romeo7662@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
gdnative = "0.10.0"
# gdnative = { path = "../../godot-rust/gdnative" }
lazy_static = "1.4.0"
conv = "0.3.3"
# bevy_ecs = "0.7.0"
common = { path = "../common" }
message-io = "0.14.5"
nanoserde = "0.1.29"
bitfield = "0.13.2"
base64 = "0.13.0"
log = "0.4.17"
fern = { version = "0.6.1", features = ["colored"] }
chrono = "0.4"
colored = "2.0.0"
derive-new = "0.5.9"
derive_builder = "0.11.2"
bitflags = "1.3.2"
