[package]
name = "server"
version = "0.1.0"
edition = "2021"

# [workspace]
# members = ["common_gdc"]
[dependencies]
conv = "0.3.3"
nanoserde = "0.1.29"
bitfield = "0.13.2"
base64 = "0.13.0"
message-io = "0.14.5"
rand = "0.8.5"
common = { path = "../common" }
log = "0.4.17"
fern = { version = "0.6.1", features = ["colored"] }
chrono = "0.4"
colored = "2.0.0"
derive-new = "0.5.9"
derive_builder = "0.11.2"
bitflags = "1.3.2"
